package com.github.sundaycrafts.cleancoders.casestudy;

public class Context {
  public static UserGateway userGateway;
  public static CodecastGateway codecastGateway;
  public static LicenseGateway licenseGateway;
  public static GateKeeper gateKeeper;
}
