package com.github.sundaycrafts.cleancoders.casestudy;

public class GateKeeper {
  private User loggedInUser;

  public void setLoggedInUser(User loggedInUser) {
    this.loggedInUser = loggedInUser;
  }

  public User getLoggedInUser() {
    return loggedInUser;
  }
}
