package com.github.sundaycrafts.cleancoders.casestudy.acceptance;

public class PresentableCodecast {
}
