@startuml
allow_mixing
database Database

package Core {
  class Entity
  class User
  class Codecast
  class License
  interface CodecastGateway
  interface LicenseGateway
  interface UserGateway
  class DAO
  class Context
  class PresentableCodecast <<DS>>
  class PresentCodecastUsecase
  class Gatekeeper {
    ---
    + setLoginUser
  }
}

PresentCodecastUsecase --> Context
Context --> UserGateway
Context --> LicenseGateway
Context --> CodecastGateway
Context --> Gatekeeper
LicenseGateway <|-- DAO
CodecastGateway <|-- DAO
UserGateway <|-- DAO
LicenseGateway --> Codecast
LicenseGateway --> License
LicenseGateway --> User
CodecastGateway --> Codecast
DAO --> Database
User --|> Entity
License --|> Entity
Codecast --|> Entity

package GUI {
  object Presenter
}

Presenter --> PresentableCodecast
PresentCodecastUsecase *.. PresentableCodecast : generate

object Session
cloud Somewhere
Somewhere --> Session
Session ..* Gatekeeper : validated
@enduml